# sfml-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  analyze.sh  build-debug.bat  build-debug.sh  build-release.bat  build-release.sh  main.cpp  profile.sh
include/: AssetManager.hpp  CoreComponents.hpp  Game.hpp  GameScene.hpp  Scene.hpp  SceneManager.hpp  game.hpp
include/Core/: CoreComponents.hpp  Game.hpp  Scene.hpp
include/Engine/: Application.hpp  AssetManager.hpp  Components.hpp  InputManager.hpp  Scene.hpp  SceneManager.hpp
include/Game/Scenes/: GameScene.hpp
include/Managers/: AssetManager.hpp  InputManager.hpp  SceneManager.hpp
include/Scenes/: GameScene.hpp  Scene.hpp
lib/: CMakeLists.txt
src/: AssetManager.cpp  Game.cpp  GameScene.cpp  InputManager.cpp  SceneManager.cpp  game.cpp  main.cpp
src/Core/: Game.cpp
src/Engine/: Application.cpp  AssetManager.cpp  InputManager.cpp  SceneManager.cpp
src/Game/Scenes/: GameScene.cpp
src/Managers/: AssetManager.cpp  InputManager.cpp  SceneManager.cpp
src/Scenes/: GameScene.cpp
